feat: service compose from entrypoint file

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,14 +9,14 @@ x-spark-common: &spark-common
     env_file:
         - .env
     volumes:
-        - ./notebooks:/opt/spark/apps
+        - ./apps:/opt/spark/apps
         - spark-logs:/opt/spark/spark-events
 
 services:
     spark-master:
         <<: *spark-common
         container_name: spark-master
-        entrypoint: ['./sbin/start-master.sh']
+        entrypoint: ['./entrypoint.sh', 'master']
         healthcheck:
             test: ['CMD', 'curl', '-f', 'http://localhost:8080']
             interval: 5s
@@ -29,7 +29,7 @@ services:
     spark-history:
         <<: *spark-common
         container_name: spark-history
-        entrypoint: ['./sbin/start-history-server.sh']
+        entrypoint: ['./entrypoint.sh', 'history']
         depends_on:
             - spark-master
         ports:
