--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,10 +2,8 @@ FROM python:3.11-bullseye as cluster-base
 
 ENV SPARK_VERSION=3.5.0
 ENV SPARK_MAJOR_VERSION=3.5
-# ENV ICEBERG_VERSION=1.4.2
 
-ENV SPARK_HOME=${SPARK_HOME:-"/opt/spark"}
-ENV HADOOP_HOME=${HADOOP_HOME:-"/opt/hadoop"}
+ENV WORKSPACE = /opt/workspace
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
@@ -21,43 +19,52 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-
-RUN mkdir -p ${HADOOP_HOME} && mkdir -p ${SPARK_HOME}
-WORKDIR ${SPARK_HOME}
-
-# Download spark
-RUN mkdir -p ${SPARK_HOME} \
- && curl https://dlcdn.apache.org/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop3.tgz -o spark-${SPARK_VERSION}-bin-hadoop3.tgz \
- && tar xvzf spark-${SPARK_VERSION}-bin-hadoop3.tgz --directory /opt/spark --strip-components 1 \
- && rm -rf spark-${SPARK_VERSION}-bin-hadoop3.tgz
+RUN mkdir -p ${WORKSPACE}
 
 ENV JAVA_HOME /usr/lib/jvm/java-11-openjdk-arm64/
 
-FROM cluster-base as pyspark
+RUN pip3 install pyspark
+
+FROM cluster-base as spark
+
+
+ENV SPARK_HOME=${SPARK_HOME:-"/opt/spark"}
+ENV HADOOP_HOME=${HADOOP_HOME:-"/opt/hadoop"}
+
+RUN mkdir -p ${HADOOP_HOME} && mkdir -p ${SPARK_HOME}
+
+WORKDIR ${SPARK_HOME}
+
+# Download spark
+RUN curl https://dlcdn.apache.org/spark/spark-${SPARK_VERSION}/spark-${SPARK_VERSION}-bin-hadoop3.tgz -o spark-${SPARK_VERSION}-bin-hadoop3.tgz \
+ && tar xvzf spark-${SPARK_VERSION}-bin-hadoop3.tgz --directory ${SPARK_HOME} --strip-components 1 \
+ && rm -rf spark-${SPARK_VERSION}-bin-hadoop3.tgz
 
 # Install Jupyter and other python deps
 COPY conf/requirements.txt .
 RUN pip3 install -r requirements.txt
 
 ENV PATH="/opt/spark/sbin:/opt/spark/bin:${PATH}"
-ENV SPARK_HOME="/opt/spark"
-
 ENV SPARK_MASTER_HOST spark-master
 ENV SPARK_MASTER_PORT 7077
 ENV PYSPARK_PYTHON python3
-
+ENV PYTHONPATH=$SPARK_HOME/python/:$PYTHONPATH
 
 COPY conf/spark-defaults.conf "$SPARK_HOME/conf"
 
 RUN chmod u+x /opt/spark/sbin/* && \
     chmod u+x /opt/spark/bin/*
 
-ENV PYTHONPATH=$SPARK_HOME/python/:$PYTHONPATH
-
 COPY ./scripts/entrypoint.sh .
-
 ENTRYPOINT ["./entrypoint.sh"]
 
+FROM cluster-base as jupyterlab
+
+RUN pip3 install jupyterlab
+
+EXPOSE 8888
+
+CMD jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root --notebook-dir=${WORKSPACE} --IdentityProvider.token=
 
 
 
