fix: env and jupyter cmds

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -40,6 +40,14 @@ RUN curl https://dlcdn.apache.org/spark/spark-${SPARK_VERSION}/spark-${SPARK_VER
  && tar xvzf spark-${SPARK_VERSION}-bin-hadoop3.tgz --directory ${SPARK_HOME} --strip-components 1 \
  && rm -rf spark-${SPARK_VERSION}-bin-hadoop3.tgz
 
+
+# Download
+# RUN curl https://repo1.maven.org/maven2/com/azure/azure-storage-blob/12.25.1/azure-storage-blob-12.25.1.jar -Lo /opt/spark/jars/iceberg-spark-runtime-${SPARK_MAJOR_VERSION}_2.12-${ICEBERG_VERSION}.jar
+
+
+
+
+
 # Install Jupyter and other python deps
 COPY conf/requirements.txt .
 RUN pip3 install -r requirements.txt
@@ -64,7 +72,16 @@ RUN pip3 install jupyterlab
 
 EXPOSE 8888
 
-CMD jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root --notebook-dir=${WORKSPACE} --IdentityProvider.token=
+CMD jupyter lab \
+    --ip=0.0.0.0 \
+    --port=8888 \
+    --no-browser \
+    --allow-root \
+    --notebook-dir=${WORKSPACE} \
+    --IdentityProvider.token="hallo" \
+    --IdentityProvider.password="hallo" \
+    --ServerApp.allow_origin="*" \
+    --ServerApp.ip="0.0.0.0"
 
 
 
